2010-11-30  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleSyntaxChecker.h: class for syntactic checking of modular logic programs
	* include/dlvhex/HexGrammarPTToASTConverter.h: incorporate syntactic checking of modular logic programs
	* src/dlvhex/ModuleSyntaxChecker.cpp: class implementation for syntactic checking of modular logic programs
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: incorporate syntactic checking of modular logic programs
	* testsuite/TestHexParserModule.cpp: update testing case for the syntactic checking of modular logic programs
	* Committed revision 2507

	* include/dlvhex/ModuleSyntaxChecker.h: updating: retrieve predSet by sequenced
	* src/dlvhex/ModuleSyntaxChecker.cpp: updating: retrieve predSet by sequenced
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: fixing bug in detecting module header
	* testsuite/TestHexParserModule.cpp: updating test case for the syntax checker

2010-11-29  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: identifying the elements of module header
	* include/dlvhex/HexGrammar.h: adding tag to pred_decl and pred_list
	* Committed revision 2502.

	* src/dlvhex/ModuleSyntaxChecker.cpp: handle the syntactic checking of modular logic programs
	* Makefile.am: including ModuleSyntaxChecker.cpp
	* Committed revision 2504.

2010-11-28  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/TestHexParserModule.cpp: add a test case for the 'even' program which consists of 3 module 
	* Committed revision 2497.

2010-11-27  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* testsuite/TestHexParserModule.cpp: testing whether the module atom is registered
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: adding createModAtomFromModAtom
	* include/dlvhex/HexGrammarPTToASTConverter.h: likewise
	* include/dlvhex/ProgramCtx.h: registering module atoms
	* include/dlvhex/Atoms.hpp: add struct ModuleAtom