@@ -1,3 +1,10 @@
+2010-12-03  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
+
+	* include/dlvhex/ModuleSyntaxChecker.h: add some syntax checking rule for duplicating predicate input
+	* src/dlvhex/ModuleSyntaxChecker.cpp: add some syntax checking rule for duplicating predicate input
+	* testsuite/TestModuleSyntaxChecker.cpp: new file, test case exclusively for the ModuleSyntaxChecker.cpp
+	* testsuite/Makefile.am: adding TestModuleSyntaxChecker.cpp
+
 2010-11-30  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
 	* include/dlvhex/ModuleSyntaxChecker.h: class for syntactic checking of modular logic programs
@@ -11,6 +18,7 @@
 	* src/dlvhex/ModuleSyntaxChecker.cpp: updating: retrieve predSet by sequenced
 	* src/dlvhex/HexGrammarPTToASTConverter.cpp: fixing bug in detecting module header
 	* testsuite/TestHexParserModule.cpp: updating test case for the syntax checker
+	* Committed revision 2509.
 
 2010-11-29  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 	
